[package]
name = "matek_wing_f405_project"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
stm32f4xx-hal = { version = "0.21.0", features = ["stm32f405", "rt"] }
heapless = "0.8.0"
rand_core = "0.6.4"
rand_chacha = "0.3.1"

[[bin]]
name = "matek_wing_f405_project"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true