[package]
name = "matek_wing_f405_project"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
stm32f4xx-hal = { version = "0.15.0", features = ["stm32f405", "rt"] }
heapless = "0.8.0"
linked_list_allocator = "0.10.5"

[[bin]]
name = "matek_wing_f405_project"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true